--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Responsive Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Trispace:wght@400;500&display=swap" rel="stylesheet">
@@ -19,47 +19,51 @@
 
 </head>
 
-<header>
+<body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-        <a class="col-lg-6 navbar-brand mx-auto" href="#">Xavier Guzman</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <header>
 
-        <div class="collapse navbar-collapse col-lg-4 mx-auto" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#index.html">About Me <span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+            <a class="navbar-brand" href="#">Xavier Guzman</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+    </header>
 
     <div class="container" id="card">
         <div class="row justify-content-start">
-            <div class="col-lg-4">
+            <div class="justify-content-start">
                 <p class="aboutme">
                     About Me
                 </p>
             </div>
         </div>
+
+        <hr>
+
         <div class="row">
-            <div class="col-lg-4">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRJniaiPMU3Z7XSOtLBTRwKYZpb45b0RWM0yw&usqp=CAU"
-                    alt="WeightSet">
-            </div>
-
             <div class="col">
+                <img id="img" class="img-fluid"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRJniaiPMU3Z7XSOtLBTRwKYZpb45b0RWM0yw&usqp=CAU"
+                    alt="WeightSet">
                 <p>
-
                     One of the greatest things I have accomplished so far is being able to be a part of someone's
                     journey. I
                     have been teaching others Strength and Conditioning for about two years now. It could be the
@@ -76,11 +80,12 @@
                     strength training. Normally we end the sessions with a cardio circuit but to keep things interesting
                     occassionally the routine does get changed around.
                 </p>
+
             </div>
 
         </div>
+    </div>
 
-</header>
 
 </body>
 
