--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <div class="container" id="card">
         <div class="row justify-content-start">
             <div class="justify-content-start">
-                <p class="aboutme">
+                <header class="aboutme">
                     About Me
-                </p>
+                </header>
             </div>
         </div>
 
