--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
     <link rel="stylesheet" href="../assets/css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -28,7 +28,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
+
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -43,8 +43,40 @@
                 </ul>
             </div>
         </nav>
-    
+
     </header>
+
+    <div class="container">
+        <div class="row justify-content-start">
+            <div class="justify-content-start">
+                <header class="aboutme">
+                    Contact Me
+                </header>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <form action="/action_page.php">
+                <div class="col">
+                    <label for="flname">Name</label>
+                    <input type="text" id="flname" name="firstlastname" placeholder="Your name..">
+                </div>
+                <div class="col">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="emailform" placeholder="Your email here..">
+                </div>
+                <div class="col">
+                    <label for="subject">Subject</label>
+                    <textarea id="subject" name="subject" placeholder="Add message here.."></textarea>
+
+                    <input type="submit" value="Submit">
+                </div>
+            </form>
+        </div>
+    </div>
+
 
 </body>
 
