--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-            <a class="navbar-brand" href="#">Xavier Guzman</a>
+            <a class="navbar-brand" href="index.html">Xavier Guzman</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
