added footer to each html

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
     </header>
 
-    <div class="container">
+    <div id="contact" class="container">
         <div class="row justify-content-start">
             <div class="justify-content-start">
                 <header class="aboutme">
@@ -77,6 +77,11 @@
         </div>
     </div>
 
+    <div class="sticky-top" class="justify-content-end">
+        <footer>
+            @ Copyright
+        </footer>
+    </div>
 
 </body>
 
