--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
         </div>
     </div>
 
+    <div class="sticky-top">
+        <footer>
+            @ Copyright
+        </footer>
+    </div>
 
 </body>
 
