--- a/portfolio.html
+++ b/portfolio.html
@@ -80,6 +80,12 @@
         </div>
     </div>
 
+    <div class="sticky-top">
+        <footer>
+            @ Copyright
+        </footer>
+    </div>
+
 </body>
 
 </html>
