added minor ReadMe notes

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,7 @@
 
     </header>
 
+<!-- Here is the beginning of my portofio. It will get better! -->
     <div id="portfolio" class="container justify-content-start">
         <div class="row">
             <div class="col">
@@ -80,6 +81,7 @@
         </div>
     </div>
 
+<!-- the footer section is set to scroll with the page on each index  -->
         <footer>
             @ Copyright
         </footer>
