--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Trispace:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets\css\style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 
 </head>
 
@@ -60,9 +60,7 @@
 
         <div class="row">
             <div class="col">
-                <img id="img" class="img-fluid"
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRJniaiPMU3Z7XSOtLBTRwKYZpb45b0RWM0yw&usqp=CAU"
-                    alt="WeightSet">
+                <img id="about-me-img" class="img-fluid" src="assets\images\xavierguzman.png" alt="selfimage">
                 <p>
                     One of the greatest things I have accomplished so far is being able to be a part of someone's
                     journey. I
@@ -75,20 +73,36 @@
 
                 <p>
                     The majority of my training takes place out of my garage. In there I have your basic squat rack,
-                    dumbbells, kettlebells, jump ropes, etc... We go over proper warm up to start of the workouts with
+                    dumbbells, kettlebells, jump ropes, etc... We go over proper warm up to start off the workouts with
                     your muscle groups ready to go! Once finished with the warm up, we of course start the routine with
                     strength training. Normally we end the sessions with a cardio circuit but to keep things interesting
                     occassionally the routine does get changed around.
                 </p>
 
+                <p>I am pursuing a career change in the field of development. To further my knowledge and experience I
+                    am currently enrolled in The University of Texas at San Antonio's Full Stack Development Bootcamp.
+                </p>
+
             </div>
 
         </div>
+
+        <div class="card">
+            <div class="card-header">
+                Contact Info
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Xavier Guzman</h5>
+                <p class="card-text">Phone: 830-374-7009</p>
+                <a href="mailto:guzmanxavi112@gmail.com" class="btn btn-primary">Email Me</a>
+            </div>
+        </div>
+
     </div>
 
-        <footer>
-         @ Copyright 2020 Xavier Guzman
-        </footer>
+    <footer>
+        @ Copyright 2020 Xavier Guzman
+    </footer>
 
 </body>
 
