added styling to html/css

--- a/index.html
+++ b/index.html
@@ -87,14 +87,16 @@
 
         </div>
 
-        <div class="card">
-            <div class="card-header">
-                Contact Info
-            </div>
-            <div class="card-body">
-                <h5 class="card-title">Xavier Guzman</h5>
-                <p class="card-text">Phone: 830-374-7009</p>
-                <a href="mailto:guzmanxavi112@gmail.com" class="btn btn-primary">Email Me</a>
+        <div class="container">
+            <div id="phone-email" class="card">
+                <div class="card-header">
+                    Contact Info
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Xavier Guzman</h5>
+                    <p class="card-text">Phone: 830-374-7009</p>
+                    <a href="mailto:guzmanxavi112@gmail.com" class="btn btn-primary">Email Me</a>
+                </div>
             </div>
         </div>
 
