changed email tag to display my email

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Xavier Guzman</h5>
                     <p class="card-text">Phone: 830-374-7009</p>
-                    <a href="mailto:guzmanxavi112@gmail.com" class="btn btn-primary">Email Me</a>
+                    <a href="mailto:guzmanxavi112@gmail.com" class="btn btn-primary">guzmanxavi112@gmail.com</a>
                 </div>
             </div>
         </div>
