added downloadable link to my resume

--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                     <h5 class="card-title">Xavier Guzman</h5>
                     <p class="card-text">Phone: 830-374-7009</p>
                     <a href="mailto:guzmanxavi112@gmail.com" class="btn btn-primary">guzmanxavi112@gmail.com</a>
+                    <a href="https://drive.google.com/file/d/1ox_J2H01PpK2pcBqsaGsVu3cqHsXIWFF/view?usp=sharing"
+                        class="btn btn-primary" download>Resume
+                    </a>
                 </div>
             </div>
         </div>
